--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Satisfy"rel="stylesheet">
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
