--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@ layout: compress
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Satisfy"rel="stylesheet">
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +13,7 @@ layout: compress
     <meta name="author" content="{{ site.author }}"/>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="css/modern-blog.css"/>
     <!--[if IE]>
     <script type="text/javascript" src="js/vendors/html5.min.js"></script>
